<package>
  <name>interactive_markers</name>
  <description>
     3D interactive marker communication library for RViz and similar tools.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>  
  <version>1.11.4</version>

  <author>David Gossow</author>

  <url>http://ros.org/wiki/interactive_markers</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>rclpy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
	  <build_type>ament_cmake</build_type>
  </export>
</package>
